--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/omlette.html">Omelette</a></li>
             <li><a href="recipes/chicken.html">Chicken</a></li>
+            <li><a href="recipes/tadka.html">Tadka</a></li>
             
         </ul>
     </body>
