--- a/recipes/tadka.html
+++ b/recipes/tadka.html
@@ -7,7 +7,7 @@
     <body>
         <a href="../index.html">Home</a>
         <h1>Tadka</h1>
-        <img src="" alt="../images/tadka.png" width="312">
+        <img src="../images/tadka.png" alt="Image of Tadka" width="312">
         <h2>How to make brilliant Tadka</h2>
         <p>Making Brilliant Tadka sabji is actually easier than it seems. Tadkas are 
             full of anti-oxidants and have essential nutrients packed in them.
